[package]
name = "tokensave-large-treesitters"
version = "0.1.0"
authors = ["Enzo Lombardi <enzinol@gmail.com>"]
edition = "2024"
description = "All tree-sitter grammars for tokensave (28 languages)"
license = "MIT"
repository = "https://github.com/aovestdipaperino/tokensave-large-treesitters"
readme = "README.md"

[workspace]

[dependencies]
tokensave-medium-treesitters = { version = "0.1.0", path = "../tokensave-medium-treesitters" }
tree-sitter = "0.26"
tree-sitter-language = "0.1"
tree-sitter-zig = "1.1"
tree-sitter-nix = "0.3"
tree-sitter-proto = "0.4"
tree-sitter-perl = "1.1"
tree-sitter-fortran = "0.5"
